# omni-lyric

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
Frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
Frontend/src/: App.jsx  PlayButton.jsx
docker/: docker-compose.yml
src/api/: app.py  routes.py  schemas.py
src/api/services/: search.py
src/db/: create_index.py  init_db.py  models.py  session.py
src/ingestion/: ingest_csv.py  loader.py  test_ingest.py
src/ml/: embeddings.py  pipeline.py  test_embedding.py  test_pipeline_integration.py
