[project]
name = "omni-lyric"
version = "0.1.0"
description = ""
authors = [
    {name = "sa16",email = "28266026+sa16@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.15"
dependencies = [
    "fastapi (>=0.125.0,<0.126.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "numpy (<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "sentence-transformers (==2.7.0)",
    "transformers (==4.38.2)",
    "torch (==2.2.2)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "xgboost (>=3.1.2,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[tool.poetry]
package-mode= false
